# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
.dev_tools/: setup_dev_tools.sh
pre_commit_hooks/: pip_compile_lock.py  run_pytest_cov.py
