[metadata]
name = pre_commit_hooks
version = 1.0.4
description = Miscellaneous pre-commit hooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rcrespoa/pre-commit-hooks
author = Roberto Crespo
author_email = ra.crespoa@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pip-tools==6.9.0
    pytest==7.1.3
    pytest-cov==4.0.0
    coverage==6.5.0
    pytest-socket==0.5.1
    pytest-sugar==0.9.5
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    pip-compile-lock = pre_commit_hooks.pip_compile_lock:main
    run-pytest-cov = pre_commit_hooks.run_pytest_cov:main

[bdist_wheel]
universal = True

; [coverage:run]
; plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:report]
exclude_lines = "pragma: no cover"